[package]
name = "benchmark"
version = "0.1.0"

[dependencies]
atomicring = "0.5.3"
chan = "0.1.19"
crossbeam = "0.3.0"
crossbeam-channel = { path = ".." }
mpmc = "0.1.5"

[features]
yield = []
medium_size = []
large_size = []

[[bin]]
name = "crossbeam-channel"
path = "crossbeam-channel.rs"

[[bin]]
name = "chan"
path = "chan.rs"

[[bin]]
name = "mpsc"
path = "mpsc.rs"

[[bin]]
name = "ms_queue"
path = "ms_queue.rs"

[[bin]]
name = "seg_queue"
path = "seg_queue.rs"

[[bin]]
name = "atomicring"
path = "atomicring.rs"

[[bin]]
name = "atomicringqueue"
path = "atomicringqueue.rs"

[[bin]]
name = "mpmc"
path = "mpmc.rs"
