[package]
name = "benchmark"
version = "0.1.0"

[dependencies]
atomicring = "0.5.3"
bus = "2.0.0"
chan = "0.1.19"
crossbeam = "0.3.0"
crossbeam-channel = { path = ".." }
futures = "0.2.1"
mpmc = "0.1.5"

[[bin]]
name = "atomicring"
path = "atomicring.rs"

[[bin]]
name = "atomicringqueue"
path = "atomicringqueue.rs"

[[bin]]
name = "bus"
path = "bus.rs"

[[bin]]
name = "chan"
path = "chan.rs"

[[bin]]
name = "crossbeam-channel"
path = "crossbeam-channel.rs"

[[bin]]
name = "futures-channel"
path = "futures-channel.rs"

[[bin]]
name = "mpsc"
path = "mpsc.rs"

[[bin]]
name = "mpsc-wrapper"
path = "mpsc-wrapper.rs"

[[bin]]
name = "msqueue"
path = "msqueue.rs"

[[bin]]
name = "segqueue"
path = "segqueue.rs"

[[bin]]
name = "mpmc"
path = "mpmc.rs"
