[package]
name = "crossbeam-channel"
# When publishing a new version:
# - Update CHANGELOG.md
# - Update README.md
# - Create "crossbeam-channel-X.Y.Z" git tag
version = "0.4.3"
authors = ["The Crossbeam Project Developers"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/crossbeam-rs/crossbeam"
homepage = "https://github.com/crossbeam-rs/crossbeam/tree/master/crossbeam-channel"
documentation = "https://docs.rs/crossbeam-channel"
description = "Multi-producer multi-consumer channels for message passing"
keywords = ["channel", "mpmc", "select", "golang", "message"]
categories = ["algorithms", "concurrency", "data-structures"]

[features]
default = ["std"]

# Enable to use APIs that require `std`.
# This is enabled by default.
std = ["crossbeam-utils/std"]

[dependencies]
cfg-if = "0.1.10"

[dependencies.crossbeam-utils]
version = "0.7"
path = "../crossbeam-utils"
default-features = false
optional = true

[dev-dependencies]
num_cpus = "1.13.0"
rand = "0.7.3"
signal-hook = "0.1.15"
