[package]
name = "crossbeam-skiplist"
# When publishing a new version:
# - Update CHANGELOG.md
# - Update README.md
# - Create "crossbeam-skiplist-X.Y.Z" git tag
version = "0.0.0"
authors = ["The Crossbeam Project Developers"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/crossbeam-rs/crossbeam"
homepage = "https://github.com/crossbeam-rs/crossbeam/tree/master/crossbeam-skiplist"
documentation = "https://docs.rs/crossbeam-skiplist"
description = "A concurrent skip list"
keywords = ["map", "set", "skiplist", "lock-free"]
categories = ["algorithms", "concurrency", "data-structures", "no-std"]

[features]
default = ["std"]
nightly = ["crossbeam-epoch/nightly", "crossbeam-utils/nightly"]
std = ["crossbeam-epoch/std", "crossbeam-utils/std"]

[dependencies]
cfg-if = "0.1.2"

[dependencies.crossbeam-epoch]
version = "0.7"
path = "../crossbeam-epoch"
default-features = false

[dependencies.crossbeam-utils]
version = "0.6"
path = "../crossbeam-utils"
default-features = false

[dependencies.scopeguard]
version = "0.3.0"
default-features = false

[dev-dependencies]
rand = "0.6"
