[package]
name = "crossbeam-skiplist"
# When publishing a new version:
# - Update CHANGELOG.md
# - Update README.md (when increasing major or minor version)
# - Run './tools/publish.sh crossbeam-skiplist <version>'
version = "0.2.0"
edition = "2021"
# NB: Sync with msrv badge and "Compatibility" section in README.md
rust-version = "1.74"
license = "MIT OR Apache-2.0"
repository = "https://github.com/crossbeam-rs/crossbeam"
homepage = "https://github.com/crossbeam-rs/crossbeam/tree/master/crossbeam-skiplist"
description = "A concurrent skip list"
keywords = ["map", "set", "skiplist", "lock-free"]
categories = ["algorithms", "concurrency", "data-structures", "no-std"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[package.metadata.cargo_check_external_types]
# The following are external types that are allowed to be exposed in our public API.
allowed_external_types = [
    "crossbeam_epoch::*",
]

[features]
default = ["std"]

# Enable to use APIs that require `std`.
# This is enabled by default.
std = ["alloc", "crossbeam-epoch/std", "crossbeam-utils/std"]

# Enable to use APIs that require `alloc`.
# This is enabled by default and also enabled if the `std` feature is enabled.
#
# NOTE: Disabling both `std` *and* `alloc` features is not supported yet.
alloc = ["crossbeam-epoch/alloc"]

[dependencies]
crossbeam-epoch = { version = "0.10.0", path = "../crossbeam-epoch", default-features = false }
crossbeam-utils = { version = "0.9.0", path = "../crossbeam-utils", default-features = false }

[dev-dependencies]
fastrand = "2"

[lints]
workspace = true
