[package]
name = "benchmarks"
version = "0.1.0"
edition = "2018"
publish = false

[dependencies]
atomicring = "1.1.1"
bus = "2.0.1"
chan = "0.1.23"
crossbeam = { path = "../.." }
crossbeam-channel = { path = ".." }
crossbeam-deque = { path = "../../crossbeam-deque" }
flume = "0.10"
futures = { version = "0.3", features = ["thread-pool"] }
libc = "0.2"
lockfree = "0.5.1"
mpmc = "0.1.5"

[[bin]]
name = "atomicring"
path = "atomicring.rs"
doc = false

[[bin]]
name = "atomicringqueue"
path = "atomicringqueue.rs"
doc = false

[[bin]]
name = "bus"
path = "bus.rs"
doc = false

[[bin]]
name = "chan"
path = "chan.rs"
doc = false

[[bin]]
name = "crossbeam-channel"
path = "crossbeam-channel.rs"
doc = false

[[bin]]
name = "crossbeam-deque"
path = "crossbeam-deque.rs"
doc = false

[[bin]]
name = "flume"
path = "flume.rs"
doc = false

[[bin]]
name = "futures-channel"
path = "futures-channel.rs"
doc = false

[[bin]]
name = "lockfree"
path = "lockfree.rs"
doc = false

[[bin]]
name = "mpsc"
path = "mpsc.rs"
doc = false

[[bin]]
name = "segqueue"
path = "segqueue.rs"
doc = false

[[bin]]
name = "mpmc"
path = "mpmc.rs"
doc = false

[[bin]]
name = "send-latency"
path = "send-latency.rs"
doc = false

[[bin]]
name = "unbounded-alloc"
path = "unbounded-alloc.rs"
doc = false
